fixed collapsed link z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,7 @@ nav {
 	font-size: 16px;
 	color: rgba(255,255,255,0.9) !important;
 	padding-top:26px !important;
+	z-index: 99 !important;
 }
 .navbar{
 	background-color: #96897f;
@@ -282,7 +283,7 @@ results p{
 
 /* media query */
 @media (max-width: 768px) {
-	.navbar-ex1-collapse{
+	.navbar-collapse{
 		margin-top: 73px;
 		background-color: rgb(150,137,127);
 
